{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 181,
  "lineage": "26477247-2c3b-21d4-d70d-d494f607df8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "automatic-trading-system-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b91b586c7501ab83",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-72-206-254.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.206.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "automatic-trading-system-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_lb.automatic-trading-system-nlb",
            "aws_subnet.automatic-trading-system-public-1a",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "automatic-trading-system-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:internet-gateway/igw-0cb8e80e31c7831e9",
            "id": "igw-0cb8e80e31c7831e9",
            "owner_id": "606124585607",
            "tags": {
              "Name": "automatic-trading-system-igw"
            },
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "automatic-trading-system-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:loadbalancer/net/automatic-trading-system-nlb/7f245391d22e93ab",
            "arn_suffix": "net/automatic-trading-system-nlb/7f245391d22e93ab",
            "dns_name": "automatic-trading-system-nlb-7f245391d22e93ab.elb.ap-northeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:loadbalancer/net/automatic-trading-system-nlb/7f245391d22e93ab",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "automatic-trading-system-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0fae97767927e0c48"
              }
            ],
            "subnets": [
              "subnet-0fae97767927e0c48"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0556e8520a820e08c",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "aws_subnet.automatic-trading-system-public-1a",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "automatic-trading-system-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:listener/net/automatic-trading-system-nlb/7f245391d22e93ab/ecd5a66515014390",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:targetgroup/automatic-nlb-api-tg/a00f4002d5364c97",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:listener/net/automatic-trading-system-nlb/7f245391d22e93ab/ecd5a66515014390",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:loadbalancer/net/automatic-trading-system-nlb/7f245391d22e93ab",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.automatic-trading-system-nlb",
            "aws_lb_target_group.automatic-trading-system-nlb-api-tg",
            "aws_subnet.automatic-trading-system-public-1a",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "automatic-trading-system-nlb-api-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:targetgroup/automatic-nlb-api-tg/a00f4002d5364c97",
            "arn_suffix": "targetgroup/automatic-nlb-api-tg/a00f4002d5364c97",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:606124585607:targetgroup/automatic-nlb-api-tg/a00f4002d5364c97",
            "lambda_multi_value_headers_enabled": false,
            "name": "automatic-nlb-api-tg",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "automatic-trading-system-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b34890986362d969",
            "owner_id": "606124585607",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb8e80e31c7831e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "automatic-trading-system-public-route"
            },
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.automatic-trading-system-igw",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "automatic-trading-system-public-rtb-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f4acd1d521c92f9",
            "route_table_id": "rtb-0b34890986362d969",
            "subnet_id": "subnet-0fae97767927e0c48"
          },
          "dependencies": [
            "aws_internet_gateway.automatic-trading-system-igw",
            "aws_route_table.automatic-trading-system-public-rtb",
            "aws_subnet.automatic-trading-system-public-1a",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "automatic-trading-system-public-rtb-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03172aa43246a1ffe",
            "route_table_id": "rtb-0b34890986362d969",
            "subnet_id": "subnet-0d62287e97215982e"
          },
          "dependencies": [
            "aws_internet_gateway.automatic-trading-system-igw",
            "aws_route_table.automatic-trading-system-public-rtb",
            "aws_subnet.automatic-trading-system-public-1c",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "automatic-trading-system-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:security-group/sg-0f03a7a0216fd36cd",
            "description": "ECS service security group for automatic-trading-system",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system-ecs-sg-rule2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f03a7a0216fd36cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system-ecs-sg-rule1",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system-ecs-sg-rule3",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system-ecs-sg-rule4",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system-ecs-sg-rule6",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "automatic-trading-system-ecs-sg-rule5",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a2326ea3fd8857b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "automatic-trading-system-ecs-sg",
            "name_prefix": "",
            "owner_id": "606124585607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "automatic-trading-system-nlb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:security-group/sg-09a2326ea3fd8857b",
            "description": "NLB security group for automatic-trading-system",
            "egress": [],
            "id": "sg-09a2326ea3fd8857b",
            "ingress": [],
            "name": "automatic-trading-system-alb-sg",
            "name_prefix": "",
            "owner_id": "606124585607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "automatic-trading-system-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:security-group/sg-009a63f9b3d36d328",
            "description": "RDS security group for automatic-trading-system",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "automatic-trading-system rds sg rule2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "automatic-trading-system rds sg rule3",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009a63f9b3d36d328",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/16"
                ],
                "description": "automatic-trading-system rds sg rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "automatic-trading-system-rds-sg",
            "name_prefix": "",
            "owner_id": "606124585607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system-ecs-sg-rule1",
            "from_port": 8,
            "id": "sgrule-2541075875",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system-ecs-sg-rule2",
            "from_port": 0,
            "id": "sgrule-1051766348",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system-ecs-sg-rule3",
            "from_port": 80,
            "id": "sgrule-2529046072",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system-ecs-sg-rule4",
            "from_port": 443,
            "id": "sgrule-1835681144",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "automatic-trading-system-ecs-sg-rule5",
            "from_port": 0,
            "id": "sgrule-1912968333",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": "sg-09a2326ea3fd8857b",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_security_group.automatic-trading-system-nlb-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-ecs-sg-rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system-ecs-sg-rule6",
            "from_port": 8000,
            "id": "sgrule-2770792385",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f03a7a0216fd36cd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-ecs-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-rds-sg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "0.0.0.0/16"
            ],
            "description": "automatic-trading-system rds sg rule",
            "from_port": 5432,
            "id": "sgrule-3163215025",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009a63f9b3d36d328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-rds-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-rds-sg-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "automatic-trading-system rds sg rule2",
            "from_port": 0,
            "id": "sgrule-1749012949",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-009a63f9b3d36d328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-rds-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "automatic-trading-system-rds-sg-rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "automatic-trading-system rds sg rule3",
            "from_port": 0,
            "id": "sgrule-2457753701",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-009a63f9b3d36d328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.automatic-trading-system-rds-sg",
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "automatic-trading-system-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:subnet/subnet-0fae97767927e0c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fae97767927e0c48",
            "map_public_ip_on_launch": true,
            "owner_id": "606124585607",
            "tags": {
              "Name": "automatic-trading-system-public-1a"
            },
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "automatic-trading-system-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:subnet/subnet-0d62287e97215982e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d62287e97215982e",
            "map_public_ip_on_launch": true,
            "owner_id": "606124585607",
            "tags": {
              "Name": "automatic-trading-system-public-1c"
            },
            "vpc_id": "vpc-0556e8520a820e08c"
          },
          "dependencies": [
            "aws_vpc.automatic-trading-system"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "automatic-trading-system",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:606124585607:vpc/vpc-0556e8520a820e08c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051ad3a72cc91b460",
            "default_route_table_id": "rtb-023ee66ac674795fb",
            "default_security_group_id": "sg-0d650f20e1bde2873",
            "dhcp_options_id": "dopt-97392cf0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0556e8520a820e08c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-023ee66ac674795fb",
            "owner_id": "606124585607",
            "tags": {
              "Name": "automatic-trading-system"
            }
          }
        }
      ]
    }
  ]
}